--- a/LeaveRequestWebAPI/LeaveRequestWebAPI.Client/Views/Religions/Index.cshtml
+++ b/LeaveRequestWebAPI/LeaveRequestWebAPI.Client/Views/Religions/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
-                <h4 class="modal-title" id="myModalLabel">Leave Form</h4>
+                <h4 class="modal-title" id="myModalLabel">Religion Form</h4>
             </div>
             <div class="modal-body">
                 <form>
